--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,5 +35,11 @@
   <%= @user.freetext %>
 </p>
 
+<p>
+  <strong>Picture:</strong>
+  <img src="http://www.htmq.com/images/kaeru.gif">
+</p>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
