--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,7 @@
       <th>Sex</th>
       <th>Area</th>
       <th>Email</th>
+      <th>Picture</th>
       <th>Freetext</th>
       <th colspan="3"></th>
     </tr>
@@ -25,6 +26,7 @@
         <td><%= user.sex %></td>
         <td><%= user.area %></td>
         <td><%= user.email %></td>
+        <td><%= user.picture %></td>
         <td><%= user.freetext %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
