--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -1,6 +1,9 @@
 <h1>ChatMessages#index</h1>
 <p>Find me in app/views/chat_messages/index.html.erb</p>
 <div id='chat_messages'>
+  <% @chat_messages.each do |chat_message| %>
+    <div><%= chat_message.body %></div>
+  <% end %>
 </div>
 <br/>
 <form>
