--- a/app/views/event_members/index.html.erb
+++ b/app/views/event_members/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Event Members</h1>
+<h1>行事参加者</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Event</th>
-      <th>User</th>
+      <th>event</th>
+      <th>user</th>
       <th colspan="3"></th>
     </tr>
   </thead>
