--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,8 @@
 <div class="center jumbotron">
-<h1>Sample App</h1>
+<h1>HAPPY COMMUNITY</h1>
+
 <h2>
-	This is the home page for the
-	<a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-	sample application.
+	人生のベストパートナーを見つける
 </h2>
 <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
