--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New User</h1>
-
+<h1>新規登録</h1>
+<div class="center">
 <%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+    
+</div>
