--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
         <%= link_to "(^O^)", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Logout",   '#' %></li>
+            <li><%= link_to "Log in", login_path %></li>
+            <li><%= link_to "Logout", log_out, method: :delete %></li>
+            <li><%= link_to "Profile", current_user %></li>
             <li><%= link_to "Help",   '#' %></li>
           </ul>
         </nav>
