--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,7 +38,12 @@
   
   <div class="center field">
     <%= form.label :パスワード %>
-    <%= form.text_field :password_digest, id: :user_password_digest %>
+    <%= form.password_field :password, id: :user_password%>
+  </div>
+
+  <div class="center field">
+    <%= form.label :パスワード（確認） %>
+    <%= form.password_field :password_confirmation, id: :user_password_confirmation%>
   </div>
 
   <div class="center field">
