--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
         <%= link_to "(^O^)", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Log in", login_path %></li>
-            <li><%= link_to "Logout", logout_path, method: :delete %></li>
+            <li><%= link_to_if current_user.nil?, "Log in", login_path %></li>
+            <li><%= link_to_unless current_user.nil?, "Logout", logout_path, method: :delete %></li>
             <li><%= link_to "Profile", current_user %></li>
             <li><%= link_to "Help",   '#' %></li>
           </ul>
@@ -30,6 +30,9 @@
       </div>
     </header>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message%></div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
