--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<!--<p>
   <strong>Password digest:</strong>
   <%= @user.password_digest %>
-</p>
+</p>-->
 
 <p>
   <strong>Name:</strong>
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Picture:</strong>
-  <img src="http://www.htmq.com/images/kaeru.gif">
+  <%= image_tag @user.picture.thumb.url, :size => '60x60', :style => "border-radius:50%; background:url(@user.picture_url); " %>
 </p>
 
 
