--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
     <% @users.each do |user| %>
       <tr>
         <!--<td><%= user.password_digest %></td>-->
-        <td><%= image_tag user.picture.thumb.url, :size =>'60x60', :style => "border-radius:50%" %></td>
+        <td><%= image_tag user.picture.thumb.url , size: '60x60', style: "border-radius:50%" if user.picture?%></td>
         <td><%= user.name %></td>
         <td><%= user.age %></td>
         <td><%= user.sex %></td>
