--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Home Page</h1>
 </p>
 
-<p><%= @users.name %> <%= link_to  'プロフィール編集', edit_user_path(current_user) %>
+<p><%= @user.name %> <%= link_to  'プロフィール編集', edit_user_path(current_user) %>
     <%= link_to 'コミュニティ検索', '#' %></p>
 <% @communities.each do |community| %>
   <p><%= community.name %> <%= link_to 'チャット', '#' %></p>
