--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>コミュニティ名:</strong>
+  <strong>コミュニティID:</strong>
   <%= @event.community_id %>
 </p>
 
