--- a/app/views/community_tags/index.html.erb
+++ b/app/views/community_tags/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Community Tags</h1>
+<h1>コミュニティタグ</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Tag</th>
-      <th>Community</th>
+      <th>タグID</th>
+      <th>コミュニティID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +24,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Community Tag', new_community_tag_path %>
