--- a/app/views/tags/_tags_form.html.erb
+++ b/app/views/tags/_tags_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: tag, local: true) do |form| %>
+<%= form_with(model: tag, local: true) do |df| %>
   <% if tag.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(tag.errors.count, "error") %> prohibited this tag from being saved:</h2>
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :tag_name %>
+    <%= df.label :name %>
+    <%= df.text_field :name, id: :tag_name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= df.submit %>
   </div>
 <% end %>
