--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Tag</h1>
+<h1>タグ編集</h1>
 
-<%= render 'form', tag: @tag %>
+<%= render 'tags_form', tag: @tag %>
 
 <%= link_to 'Show', @tag %> |
 <%= link_to 'Back', tags_path %>
