--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tags</h1>
+<h1>タグ</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>タグ名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
