--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,9 @@
   <body style="background-color: #a8dba8">
   	<header class="navbar navbar-fixed-top navbar-inverse" >
       <div class="container">
-        <%= link_to "(^O^)", '#', id: "logo" %>
+        <%= link_to "┌(┌^o^)┐", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to_if current_user.nil?, "Log in", login_path %></li>
             <li><%= link_to_unless current_user.nil?, "Logout", logout_path, method: :delete %></li>
             <li><%= link_to "Profile", current_user %></li>
             <li><%= link_to "Help",   '#' %></li>
