検索機能完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,11 @@
         <%= link_to "┌(┌^o^)┐", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to_if current_user.nil?, "Log in", login_path %></li>
             <li><%= link_to_unless current_user.nil?, "Logout", logout_path, method: :delete %></li>
             <li><%= link_to "Profile", current_user %></li>
             <li><%= link_to "Help",   '#' %></li>
+            
           </ul>
         </nav>
       </div>
