--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -29,6 +29,7 @@
         <td><%= community.name %></td>
         <td><%= community.id %></td>
         <td><%= community.tag_name %></td>
+        <td><%=link_to '参加', members_path(member: {community_id: community.id, user_id: current_user.id}), method: :post%></td>
         <td><%= link_to 'Show', community %></td>
         <td><%= link_to 'Edit', edit_community_path(community) %></td>
         <td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
