--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 </p>
 
   <p><%= @user.name %> <%= link_to  'プロフィール編集', edit_user_path(current_user) %>
-    <%= link_to 'コミュニティ検索', '#' %></p>
+    <%= link_to 'コミュニティ検索', communities_path(current_user) %></p>
   
   <% @communities.each do |community| %>
     <p><%= community.name %> <%= link_to 'チャット', messages_path %></p>
