--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', community: @community %>
 
 <%= link_to 'Show', @community %> |
-<%= link_to 'Back', communities_path %>
+<%= link_to 'ホーム', home_path %>
