--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -25,13 +25,12 @@
   <tbody>
     <% @communities.each do |community| %>
       <tr>
-        <td><%= community.id %></td>
         <td><%= community.name %></td>
         <td><%= community.id %></td>
         <td><%= community.tag_name %></td>
         <td><%=link_to '参加', members_path(member: {community_id: community.id, user_id: current_user.id}), method: :post%></td>
         <td><%= link_to 'Show', community %></td>
-        <td><%= link_to 'Edit', edit_community_path(community) %></td>
+        <td><%= link_to 'Edit', edit_community_path(community.id) %></td>
         <td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
