--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -6,4 +6,4 @@
 </p>
 
 <%= link_to 'Edit', edit_community_path(@community) %> |
-<%= link_to 'Back', communities_path %>
+<%= link_to 'ホーム', home_path %>
