--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     <%= link_to 'コミュニティ検索', communities_path(current_user) %></p>
   
   <% @communities.each do |community| %>
-    <p><%= community.name %> <%= link_to 'チャット', messages_path %></p>
+    <p><%= community.name %> <%= link_to 'チャット', messages_path %><%= link_to '編集', edit_community_path(community.id) %></p>
   <% end %>
 
   <% @events.each do |event| %>
