--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body style="background-color: #a8dba8">
   	<header class="navbar navbar-fixed-top navbar-inverse" >
       <div class="container">
-        <%= link_to "┌(┌^o^)┐", '#', id: "logo" %>
+        <%= link_to_unless current_user.nil?, "HAPPY-COMMUNITY", home_path , id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to_if current_user.nil?, "Log in", login_path %></li>
