--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,9 +4,6 @@
 <h2>
 	人生のベストパートナーを見つける
 </h2>
-<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to "Sign up now!", login_path, class: "btn btn-lg btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-<%= link_to image_tag("kitten.jpg", alt: "kitten photo"),
-			'http://rubyonrails.org/' %>
+
