--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ChatMessages#index</h1>
+<h1>チャット</h1>
 <p>Find me in app/views/chat_messages/index.html.erb</p>
 <div id='chat_messages'>
   <% @chat_messages.each do |chat_message| %>
